--- a/adguard/config.yaml
+++ b/adguard/config.yaml
@@ -1,4 +1,4 @@
-name: AdGuard Home
+name: AdGuard Home alternate
 version: 5.1.0
 slug: adguard
 description: Network-wide ads & trackers blocking DNS server
