--- a/aircast/config.yaml
+++ b/aircast/config.yaml
@@ -1,4 +1,4 @@
-name: AirCast
+name: AirCast alternate
 version: 4.2.1
 slug: aircast
 description: AirPlay capabilities for your Chromecast devices.
