--- a/airsonos/config.yaml
+++ b/airsonos/config.yaml
@@ -1,4 +1,4 @@
-name: AirSonos
+name: AirSonos alternate
 version: 4.2.1
 slug: airsonos
 description: AirPlay capabilities for your Sonos (and UPnP) devices.
