--- a/bazarr/config.yaml
+++ b/bazarr/config.yaml
@@ -1,4 +1,4 @@
-name: Bazarr
+name: Bazarr alternate
 version: 0.2.0
 slug: bazarr
 description: Download and manage subtitles for Sonarr and Radarr
