--- a/bitwarden/config.yaml
+++ b/bitwarden/config.yaml
@@ -1,4 +1,4 @@
-name: Vaultwarden (Bitwarden)
+name: Vaultwarden (Bitwarden) alternate
 version: 0.21.2
 slug: bitwarden
 description: Open source password management solution
