--- a/dhcp_server/config.yaml
+++ b/dhcp_server/config.yaml
@@ -1,7 +1,7 @@
 ---
 version: 1.4.0
 slug: dhcp_server
-name: DHCP server
+name: DHCP server alternate
 description: A simple DHCP server
 url: https://home-assistant.io/addons/dhcp_server/
 codenotary: notary@home-assistant.io
