--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,4 +1,4 @@
-name: Example
+name: Example alternate
 version: 8.0.3
 slug: example
 description: Example add-on by Community Home Assistant Add-ons
