--- a/foldingathome/config.yaml
+++ b/foldingathome/config.yaml
@@ -1,4 +1,4 @@
-name: Folding@home
+name: Folding@home alternate
 version: 0.7.2
 slug: foldingathome
 description: Fighting disease with a world wide distributed super computer
