--- a/jupyterlab/config.yaml
+++ b/jupyterlab/config.yaml
@@ -1,4 +1,4 @@
-name: JupyterLab
+name: JupyterLab alternate
 version: 0.15.1
 slug: jupyterlablite
 description: Create documents containing live code, equations, visualizations, and
