--- a/log-viewer/config.yaml
+++ b/log-viewer/config.yaml
@@ -1,4 +1,4 @@
-name: Log Viewer
+name: Log Viewer alternate
 version: 0.17.0
 slug: logviewer
 description: Browser-based log utility for Home Assistant
