--- a/motioneye/config.yaml
+++ b/motioneye/config.yaml
@@ -1,4 +1,4 @@
-name: motionEye
+name: motionEye alternate
 version: 0.20.0
 slug: motioneye
 description: Simple, elegant and feature-rich CCTV/NVR for your cameras
