--- a/node-red/config.yaml
+++ b/node-red/config.yaml
@@ -1,4 +1,4 @@
-name: Node-RED
+name: Node-RED alternate
 version: 17.0.13
 slug: nodered
 description: Flow-based programming for the Internet of Things
