--- a/phpmyadmin/config.yaml
+++ b/phpmyadmin/config.yaml
@@ -1,4 +1,4 @@
-name: phpMyAdmin
+name: phpMyAdmin alternate
 version: 0.9.1
 slug: phpmyadmin
 description: A web interface for the official MariaDB add-on
