--- a/plex/config.yaml
+++ b/plex/config.yaml
@@ -1,4 +1,4 @@
-name: Plex Media Server
+name: Plex Media Server alternate
 version: 3.5.1
 slug: plex
 description: Recorded media, live TV, online news, and podcasts ready to stream.
