--- a/tautulli/config.yaml
+++ b/tautulli/config.yaml
@@ -1,4 +1,4 @@
-name: Tautulli
+name: Tautulli alternate
 version: 4.0.1
 slug: tautulli
 description: Monitoring and tracking tool for Plex Media Server
