--- a/tellstick/config.yaml
+++ b/tellstick/config.yaml
@@ -1,9 +1,9 @@
 ---
 version: 2.2.0
 slug: tellstick
-name: TellStick
+name: TellStick alternate
 description: TellStick and TellStick Duo service
-url: https://github.com/home-assistant/addons/tree/master/tellstick
+url: https://github.com/amluto/hassio-jwavejs2-repository/tree/master/tellstick
 arch:
   - armhf
   - armv7
