--- a/vscode/config.yaml
+++ b/vscode/config.yaml
@@ -1,4 +1,4 @@
-name: Studio Code Server
+name: Studio Code Server alternate
 version: 5.15.0
 slug: vscode
 description: Fully featured Visual Studio Code (VSCode) experience integrated in the
