--- a/zerotier/config.yaml
+++ b/zerotier/config.yaml
@@ -1,4 +1,4 @@
-name: ZeroTier One
+name: ZeroTier One alternate
 version: 0.18.0
 slug: zerotier
 description: Radically simplify your network with a virtual networking layer that
