--- a/assist_microphone/config.yaml
+++ b/assist_microphone/config.yaml
@@ -1,9 +1,9 @@
 ---
 version: 1.2.0
 slug: assist_microphone
-name: Assist Microphone
+name: Assist Microphone alternate
 description: Use Assist with local microphone
-url: https://github.com/home-assistant/addons/blob/master/assist_microphone
+url: https://github.com/amluto/hassio-jwavejs2-repository/blob/master/assist_microphone
 hassio_api: true
 arch:
   - amd64
