--- a/cec_scan/config.yaml
+++ b/cec_scan/config.yaml
@@ -1,8 +1,8 @@
 ---
 version: "3.0"
 slug: cec_scan
-name: CEC Scanner
-url: https://github.com/home-assistant/addons/tree/master/cec_scan
+name: CEC Scanner alternate
+url: https://github.com/amluto/hassio-jwavejs2-repository/tree/master/cec_scan
 arch:
   - armhf
   - armv7
