--- a/chrony/config.yaml
+++ b/chrony/config.yaml
@@ -1,4 +1,4 @@
-name: chrony
+name: chrony alternate
 version: 3.0.1
 slug: chrony
 description: A local NTP (Network Time Protocol) server for cameras etc.
