--- a/deconz/config.yaml
+++ b/deconz/config.yaml
@@ -1,10 +1,10 @@
 ---
 version: 7.0.0
 slug: deconz
-name: deCONZ
+name: deCONZ alternate
 description: >-
   Control a Zigbee network with ConBee or RaspBee by Dresden Elektronik.
-url: https://github.com/home-assistant/addons/tree/master/deconz
+url: https://github.com/amluto/hassio-jwavejs2-repository/tree/master/deconz
 apparmor: false
 arch:
   - amd64
