--- a/duckdns/config.yaml
+++ b/duckdns/config.yaml
@@ -1,10 +1,10 @@
 ---
 version: 1.18.0
 slug: duckdns
-name: Duck DNS
+name: Duck DNS alternate
 description: >-
   Free Dynamic DNS (DynDNS or DDNS) service with Let's Encrypt support
-url: https://github.com/home-assistant/addons/tree/master/duckdns
+url: https://github.com/amluto/hassio-jwavejs2-repository/tree/master/duckdns
 arch:
   - armhf
   - armv7
