--- a/emqx/config.yaml
+++ b/emqx/config.yaml
@@ -1,4 +1,4 @@
-name: EMQX
+name: EMQX alternate
 version: 0.6.0
 slug: emqx
 description: The most scalable open-source MQTT broker for IoT. An alternative for
@@ -11,7 +11,7 @@ ingress_port: 18083
 ingress_stream: true
 init: false
 panel_icon: mdi:pipe
-panel_title: EMQX
+panel_title: EMQX alternate
 arch:
 - aarch64
 - amd64
