--- a/grafana/config.yaml
+++ b/grafana/config.yaml
@@ -1,4 +1,4 @@
-name: Grafana
+name: Grafana alternate
 version: 10.0.0
 slug: grafana
 description: The open platform for beautiful analytics and monitoring
@@ -10,7 +10,7 @@ ingress_port: 1337
 ingress_stream: true
 init: false
 panel_icon: mdi:chart-timeline
-panel_title: Grafana
+panel_title: Grafana alternate
 arch:
 - aarch64
 - amd64
