--- a/grocy/config.yaml
+++ b/grocy/config.yaml
@@ -1,4 +1,4 @@
-name: Grocy
+name: Grocy alternate
 version: 0.21.0
 slug: grocy
 description: ERP beyond your fridge! A groceries & household management solution for
