--- a/matter_server/config.yaml
+++ b/matter_server/config.yaml
@@ -1,7 +1,7 @@
 ---
 version: 6.5.1
 slug: matter_server
-name: Matter Server
+name: Matter Server alternate
 description: Matter WebSocket Server for Home Assistant Matter support.
 url: >-
   https://github.com/home-assistant/addons/tree/master/matter_server
