--- a/mosquitto/config.yaml
+++ b/mosquitto/config.yaml
@@ -1,9 +1,9 @@
 ---
 version: 6.4.1
 slug: mosquitto
-name: Mosquitto broker
+name: Mosquitto broker alternate
 description: An Open Source MQTT broker
-url: https://github.com/home-assistant/addons/tree/master/mosquitto
+url: https://github.com/amluto/hassio-jwavejs2-repository/tree/master/mosquitto
 codenotary: notary@home-assistant.io
 arch:
   - armhf
