--- a/nginxproxymanager/config.yaml
+++ b/nginxproxymanager/config.yaml
@@ -1,4 +1,4 @@
-name: Nginx Proxy Manager
+name: Nginx Proxy Manager alternate
 version: 1.0.1
 slug: nginxproxymanager
 description: Manage Nginx proxy hosts with a simple, powerful interface
