--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -1,7 +1,7 @@
 ---
 version: 2.10.0
 slug: openthread_border_router
-name: OpenThread Border Router
+name: OpenThread Border Router alternate
 description: OpenThread Border Router add-on
 url: >-
   https://github.com/home-assistant/addons/tree/master/openthread_border_router
