--- a/openwakeword/config.yaml
+++ b/openwakeword/config.yaml
@@ -1,9 +1,9 @@
 ---
 version: 1.10.0
 slug: openwakeword
-name: openWakeWord
+name: openWakeWord alternate
 description: openWakeWord using the Wyoming protocol
-url: https://github.com/home-assistant/addons/blob/master/openwakeword
+url: https://github.com/amluto/hassio-jwavejs2-repository/blob/master/openwakeword
 arch:
   - amd64
   - aarch64
