--- a/overseerr/config.yaml
+++ b/overseerr/config.yaml
@@ -1,4 +1,4 @@
-name: Overseerr
+name: Overseerr alternate
 version: 0.1.0
 slug: overseerr
 description: Request management and media discovery tool for the Plex ecosystem
