--- a/piper/config.yaml
+++ b/piper/config.yaml
@@ -1,9 +1,9 @@
 ---
 version: 1.5.2
 slug: piper
-name: Piper
+name: Piper alternate
 description: Text-to-speech with Piper
-url: https://github.com/home-assistant/addons/blob/master/piper
+url: https://github.com/amluto/hassio-jwavejs2-repository/blob/master/piper
 arch:
   - amd64
   - aarch64
