--- a/radarr/config.yaml
+++ b/radarr/config.yaml
@@ -1,4 +1,4 @@
-name: Radarr
+name: Radarr alternate
 version: 0.5.0
 slug: radarr
 description: Movie organizer/manager for usenet and torrent users
