--- a/silabs-multiprotocol/config.yaml
+++ b/silabs-multiprotocol/config.yaml
@@ -1,7 +1,7 @@
 ---
 version: 2.4.5
 slug: silabs_multiprotocol
-name: Silicon Labs Multiprotocol
+name: Silicon Labs Multiprotocol alternate
 description: Zigbee and OpenThread multiprotocol add-on
 url: >
   https://github.com/home-assistant/addons/tree/master/silabs-multiprotocol
