--- a/spotify/config.yaml
+++ b/spotify/config.yaml
@@ -1,4 +1,4 @@
-name: Spotify Connect
+name: Spotify Connect alternate
 version: 0.13.0
 slug: spotify
 description: Play Spotify music on your Home Assistant device
