--- a/tasmoadmin/config.yaml
+++ b/tasmoadmin/config.yaml
@@ -1,4 +1,4 @@
-name: TasmoAdmin
+name: TasmoAdmin alternate
 version: 0.30.2
 slug: sonweb
 description: Centrally manage all your Sonoff-Tasmota devices
