--- a/uptime-kuma/config.yaml
+++ b/uptime-kuma/config.yaml
@@ -1,4 +1,4 @@
-name: Uptime Kuma
+name: Uptime Kuma alternate
 version: 0.12.1
 slug: uptime-kuma
 description: It is a self-hosted monitoring tool like "Uptime Robot"
