--- a/whisparr/config.yaml
+++ b/whisparr/config.yaml
@@ -1,4 +1,4 @@
-name: Whisparr
+name: Whisparr alternate
 version: 0.1.0
 slug: whisparr
 description: Whisparr is an adult video collection manager for Usenet and BitTorrent
